--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
 
 
 
-
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
